[gd_scene load_steps=31 format=3 uid="uid://nqk78c318shk"]

[ext_resource type="Script" path="res://src/platform_player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ddjsc5l3hsrsk" path="res://sprites/fposter,small,wall_texture,square_product,600x600.jpg" id="2_5anam"]
[ext_resource type="Script" path="res://src/player_animation_tree.gd" id="3_y516s"]
[ext_resource type="Texture2D" uid="uid://yj8ud4sdcyuf" path="res://sprites/Hero.png" id="4_xxpte"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(6, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_xitqh"]
radius = 5.0

[sub_resource type="Animation" id="Animation_cji22"]
resource_name = "Player_Airborn"
length = 0.333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_xxpte")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(7, 32, 8, 8), Rect2(7, 8, 8, 8), Rect2(7, 32, 8, 8)]
}

[sub_resource type="Animation" id="Animation_wya6d"]
resource_name = "Player_Dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_1wcw7"]
resource_name = "Player_Iddle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_xxpte")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(7, 48, 8, 8), Rect2(15, 48, 8, 8), Rect2(7, 48, 8, 8)]
}

[sub_resource type="Animation" id="Animation_sk4e6"]
resource_name = "Player_Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_xxpte")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(7, 16, 8, 8), Rect2(15, 16, 8, 8)]
}

[sub_resource type="Animation" id="Animation_jjy6r"]
resource_name = "Player_Run"
length = 0.33
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_xxpte")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(15, 8, 8, 8), Rect2(7, 8, 8, 8), Rect2(15, 8, 8, 8)]
}

[sub_resource type="Animation" id="Animation_a2ahn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_5anam")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(7.038, 7.98, 8, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u1o3d"]
_data = {
"Player_Airborn": SubResource("Animation_cji22"),
"Player_Dead": SubResource("Animation_wya6d"),
"Player_Iddle": SubResource("Animation_1wcw7"),
"Player_Jump": SubResource("Animation_sk4e6"),
"Player_Run": SubResource("Animation_jjy6r"),
"RESET": SubResource("Animation_a2ahn")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e3wch"]
animation = &"Player_Airborn"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eg0ji"]
animation = &"Player_Dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wga5k"]
animation = &"Player_Iddle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fm1nx"]
animation = &"Player_Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v54ke"]
animation = &"Player_Run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pyu51"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y2gdy"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n68cl"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0b27r"]
break_loop_at_end = true
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4evwo"]
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5riim"]
break_loop_at_end = true
advance_mode = 2
advance_condition = &"iddle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lxe7e"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tktgu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bm60l"]
advance_mode = 2
advance_condition = &"airborn"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u3uq7"]
switch_mode = 2
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dvs2w"]
advance_mode = 2
advance_condition = &"airborn"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_iqq4m"]
allow_transition_to_self = true
reset_ends = true
states/End/position = Vector2(178, 339)
states/Player_Airborn/node = SubResource("AnimationNodeAnimation_e3wch")
states/Player_Airborn/position = Vector2(511, 111)
states/Player_Dead/node = SubResource("AnimationNodeAnimation_eg0ji")
states/Player_Dead/position = Vector2(178, 257)
states/Player_Iddle/node = SubResource("AnimationNodeAnimation_wga5k")
states/Player_Iddle/position = Vector2(296, 99)
states/Player_Jump/node = SubResource("AnimationNodeAnimation_fm1nx")
states/Player_Jump/position = Vector2(617, -38)
states/Player_Run/node = SubResource("AnimationNodeAnimation_v54ke")
states/Player_Run/position = Vector2(638, 293)
states/Start/position = Vector2(123, 99)
transitions = ["Start", "Player_Iddle", SubResource("AnimationNodeStateMachineTransition_pyu51"), "Player_Iddle", "Player_Jump", SubResource("AnimationNodeStateMachineTransition_y2gdy"), "Player_Jump", "Player_Airborn", SubResource("AnimationNodeStateMachineTransition_n68cl"), "Player_Airborn", "Player_Iddle", SubResource("AnimationNodeStateMachineTransition_0b27r"), "Player_Iddle", "Player_Run", SubResource("AnimationNodeStateMachineTransition_4evwo"), "Player_Run", "Player_Iddle", SubResource("AnimationNodeStateMachineTransition_5riim"), "Player_Run", "Player_Jump", SubResource("AnimationNodeStateMachineTransition_lxe7e"), "Player_Dead", "End", SubResource("AnimationNodeStateMachineTransition_tktgu"), "Player_Iddle", "Player_Airborn", SubResource("AnimationNodeStateMachineTransition_bm60l"), "Player_Jump", "Player_Iddle", SubResource("AnimationNodeStateMachineTransition_u3uq7"), "Player_Run", "Player_Airborn", SubResource("AnimationNodeStateMachineTransition_dvs2w")]
graph_offset = Vector2(-170, 134)

[node name="PlatformPlayer" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.035, 1.035)
shape = SubResource("1")

[node name="Direction" type="Marker2D" parent="."]

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
shape = SubResource("CircleShape2D_xitqh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.23517e-07, 0)
scale = Vector2(0.675, 1)
texture = ExtResource("2_5anam")
region_enabled = true
region_rect = Rect2(7.038, 7.98, 8, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u1o3d")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_iqq4m")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/airborn = false
parameters/conditions/grounded = false
parameters/conditions/iddle = false
parameters/conditions/jump = false
parameters/conditions/running = false
script = ExtResource("3_y516s")

[connection signal="is_airborn" from="." to="AnimationTree" method="_on_platform_player_is_airborn"]
[connection signal="is_grounded" from="." to="AnimationTree" method="_on_platform_player_is_grounded"]
[connection signal="is_iddling" from="." to="AnimationTree" method="_on_platform_player_is_iddling"]
[connection signal="is_jumping" from="." to="AnimationTree" method="_on_platform_player_is_jumping"]
[connection signal="is_running" from="." to="AnimationTree" method="_on_platform_player_is_running"]
